hphp/hack/test/sound_dynamic/typing/sub_function_type_dynamic.bad.php.exp
File "sub_function_type_dynamic.bad.php", line 11, characters 3-20:
Typing error (Typing[4110])
  File "sub_function_type_dynamic.bad.php", line 7, characters 13-15:
  Expected `int`
  File "sub_function_type_dynamic.bad.php", line 11, characters 14-20:
  But got `dynamic`
File "sub_function_type_dynamic.bad.php", line 12, characters 3-20:
Typing error (Typing[4110])
  File "sub_function_type_dynamic.bad.php", line 12, characters 14-20:
  Expected `dynamic`
  File "sub_function_type_dynamic.bad.php", line 8, characters 29-33:
  But got `mixed`
File "sub_function_type_dynamic.bad.php", line 13, characters 3-20:
Typing error (Typing[4110])
  File "sub_function_type_dynamic.bad.php", line 13, characters 14-20:
  Expected `dynamic`
  File "sub_function_type_dynamic.bad.php", line 9, characters 19-23:
  But got `mixed`
File "sub_function_type_dynamic.bad.php", line 14, characters 3-20:
Typing error (Typing[4110])
  File "sub_function_type_dynamic.bad.php", line 14, characters 14-20:
  Expected `dynamic`
  File "sub_function_type_dynamic.bad.php", line 10, characters 15-15:
  But got `C`
File "sub_function_type_dynamic.bad.php", line 15, characters 3-36:
Typing error (Typing[4110])
  File "sub_function_type_dynamic.bad.php", line 15, characters 5-7:
  Expected `int`
  File "sub_function_type_dynamic.bad.php", line 15, characters 30-36:
  But got `dynamic`
File "sub_function_type_dynamic.bad.php", line 16, characters 3-33:
Typing error (Typing[4110])
  File "sub_function_type_dynamic.bad.php", line 16, characters 27-33:
  Expected `dynamic`
  File "sub_function_type_dynamic.bad.php", line 16, characters 15-15:
  But got `C`
